--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <h1>History</h1>
       <ul>
         <li>Established Jan 2012</li>
-        <li>Inspired by IPRUG and the community it had fostered.</li>
-        <li>Wanted something fairly platform/code agnostic.</li>
-        <li>Most tech people deal with an interface or front end.</li>
+        <li>Inspired by IPRUG and the community it had fostered</li>
+        <li>Wanted something fairly platform/code agnostic</li>
+        <li>Most tech people deal with an interface or front end</li>
       </ul>
     </section>
     <section data-slide-id="2">
@@ -31,18 +31,18 @@
     <section data-slide-id="3">
       <h1>Talks</h1>
       <ul>
-        <li>Anywhere from 5mins to an hour</li>
+        <li>Anywhere from 5 mins to an hour</li>
         <li>Technology specific talks (coffeescript, cinema4d, appcelerator)</li>
         <li>Project specific talks (start ups, client work, personal projects)</li>
         <li>Theoretical talks (best practices, personal opinions, build techniques)</li>
-        <li>Anything really!</li>
+        <li>Anything you think people might find interesting!</li>
       </ul>
     </section>
     <section data-slide-id="4">
-      <h1>Where/When</h1>
+      <h1>Where? When?</h1>
       <ul>
         <li>Last Monday of the month</li>
-        <li>7pm room w1.16 at the Waterfront building.</li>
+        <li>7pm room W1.16 at the UCS Waterfront Building.</li>
         <li>Talks start around 7.30pm then we head to the pub (Cult Cafe) afterwards.</li>
         <li>Next one is on Monday! (28 October)</li>
         <li>details on <strong>fesuffolk.co.uk</strong></li>
